<resources>
    <string name="app_name">Greenter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_client">Cliente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_clients_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">ITEMS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">TOTAL</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">CLIENTE</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">F. Emisión</string>
    <string name="delivery_time_mock" translatable="false">F. Emisión</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">IGV</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">Tipo Doc.</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">Razon Social</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_canteen_intro1" translatable="false">Organiza tu empresa</string>
    <string name="title_canteen_intro2" translatable="false">Fideliza a tus clientes</string>
    <string name="title_canteen_intro3" translatable="false">Aumenta tus ingresos</string>
    <string name="description_canteen_intro1" translatable="false">Aprovecha el poder de la información de tus facturas electrónicas.</string>
    <string name="description_canteen_intro2" translatable="false">Conoce más de cerca a tus clientes y sus intereses.</string>
    <string name="description_canteen_intro3" translatable="false">Realiza mejores ventas mediante el análisis de tus datos</string>
    <string name="label_button_cta_canteen_intro" translatable="false">Empezar</string>

    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
</resources>
